8313081: MonitoringSupport_lock should be unconditionally initialized after 8304074

Backport-of: a9d21c61fb12a11e18c6bb8aa903e5a8e42473f1